--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ricebook</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <header>
+        <h1>Find Your Next Favorite Recipe</h1>
+    </header>
 
-<header>
-    <h1>Find Your Family's Next Recipe</h1>
-</header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="feed.html">Feed</a>
+        <a href="profile.html">Profile</a>
+    </nav>
 
-<nav>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
-</nav>
+    <section>
+        <h2>About the Page</h2>
+        <p>I'm trying to make a crowdsourced cookbook that features everyone's cooking/ favorite recipes for my AMST314 class!! <br>Please drop a recipe (or even just notes if there is no exact measurements) if you have one &lt3 <br> 
+            You can also browse recipes that other's have left in the feed page! <br> 
+            -Amanda </p>
+    </section>
+    <div id="button"> <button id="newPost">ADD A POST</button></div>
 
-<section>
-    <h2>About Us</h2>
-    <p>This is a basic HTML website template. You can customize it to fit your needs.</p>
-</section>
-
-<footer>
-    <p>&copy; 2024 Your Website. All rights reserved.</p>
-</footer>
-
+    <footer>
+        <p>&copy; 2024. All rights reserved.</p>
+    </footer>
+    <!-- <script type="module" src="./App.js"></script> -->
+    <script type="module" src="./App.js"></script>
 </body>
+
 </html>
