--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@
         <h2>About the Page</h2>
         <p>I'm trying to make a crowdsourced cookbook that features everyone's cooking/ favorite recipes for my AMST314 class!! <br>Please drop a recipe (or even just notes if there is no exact measurements) if you have one &lt3 <br> 
             You can also browse recipes that other's have left in the feed page! <br> 
-            -Amanda </p>
+                -Amanda <br>
+            PS: this will look better at the end i just need submissions for now thank youuu</p>
     </section>
     <div id="button"> <button id="newPost">ADD A POST</button></div>
 
-    <footer>
-        <p>&copy; 2024. All rights reserved.</p>
-    </footer>
     <!-- <script type="module" src="./App.js"></script> -->
     <script type="module" src="./App.js"></script>
 </body>
