--- a/new_post.html
+++ b/new_post.html
@@ -13,10 +13,14 @@
     <header>
         <h1>Create a Recipe Here</h1>
     </header>
-
-    <a href="index.html">Back to Home</a>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="feed.html">Feed</a>
+        <a href="profile.html">Profile</a>
+    </nav>
 
     <section id="recipe-div">
+        <h4>if you press post it should work pressing post multiple times will result in the recipe showing up multiple times</h4>
         <label for="name"> Author Name:</label>
         <input type="text" id="name" name="name" placeholder="amanda cheung"><br><br>
 
@@ -50,9 +54,9 @@
         <button id="submit-post"> Post</button>
     </section>
 
-    <footer>
+    <!-- <footer>
         <p>&copy; 2024 Your Website. All rights reserved.</p>
-    </footer>
+    </footer> -->
     <script type="module" src="./App.js"></script>
 </body>
 
